# little-sister

./: .gitignore  .shellcheckrc  CHANGELOG.md  LICENSE  README.md  config.yaml  lib.sh  pyproject.toml  setup.sh  start.sh  stop.sh  test_api.sh
checks/: README.md
checks/examples/: command.yaml  file.yaml  host-metrics.yaml  http.yaml  macos-memory.yaml  qnap-metrics.yaml  ssh-command.yaml  ssh-connect.yaml  ssh-script.yaml
docs/: architecture.md  create_a_release.md  decisions.md  implementing-checks.md  project.md  testing-the-gui.md  use-cases.md
docs/adr/: 0001-in-process-threaded-engine.md  0002-rlock-snapshot-synchronization.md  0003-config-and-secrets-via-env-file.md  0004-status-aggregation-semantics.md  0005-dashboard-freshness-and-self-monitoring.md  0006-config-file-and-timezones.md  0007-check-result-branches.md  0008-json-output-api.md  0009-per-profile-metrics-scripts.md  0010-python-version.md  0011-ssh-check-family.md  0012-node-metadata.md  0013-check-config-on-node.md  0014-maintenance-persistence.md  0015-check-discovery-union.md  0016-node-addressing.md  0017-node-title.md  0018-markdown-rendering.md  0019-inspection-popover.md  0020-user-list-location.md  0021-script-resolution.md  0022-generated-release-branch.md  0023-secret-references.md  0024-dashboard-layout.md
hooks/: pre-commit
src/little-sister/: status.py
src/little_sister/: __init__.py  api.py  app.py  config.py  engine.py  logger.py  maintenance.py  nodes.py  render.py  secrets.py  status.py  tree.py  users.example.yaml
src/little_sister/checks/: __init__.py  base.py  command.py  file.py  http.py  loader.py
src/little_sister/checks/ssh/: __init__.py  base.py  command.py  connect.py  host_metrics.py  macos_memory.py  metrics.py  qnap_metrics.py  script.py  transport.py
src/little_sister/scripts/: check-disk-space.sh  host-metrics-busybox.sh  host-metrics-linux.sh  host-metrics-macos.sh  memory-macos.sh  qnap-health.sh
src/little_sister/templates/: _breadcrumb.html  _header.html  _status_grid.html  _system_info.html  check.html  events.html  history.html  links.html  login.html  status.html  system.html  text.html
tests/: conftest.py  demo_check.py  demo_wsgi.py  render_ui_fixtures.py  test_api.py  test_checks.py  test_config.py  test_demo_check.py  test_docs_links.py  test_engine.py  test_host_metrics.py  test_macos_memory.py  test_maintenance.py  test_metrics_scripts.py  test_nodes.py  test_qnap_metrics.py  test_render.py  test_secrets.py  test_ssh.py  test_status.py  test_tree.py  test_ui_fixtures.py  test_web.py  ui_fixtures.py
tests/demo_checks/: ci_nightly.yaml  hosts_nas.yaml  network_vpn.yaml  security_audit.yaml  services_api.yaml  storage_backup.yaml
tests/fixtures/: users.yaml
(+4 files in other folders)
