[project]
name = "little-sister"
version = "0.2.0"
description = "This is a web application that shows the status of various systems."
authors = [
    { name = "Michael Meyling" }
]
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
license-files = ["LICENSE"]
keywords = ["monitoring", "status", "web application"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Environment :: Web Environment",
    "Framework :: Flask",
]
requires-python = ">=3.14"
dependencies = [
    "flask>=3.0",
    "gunicorn>=22.0",
    "markdown-it-py>=4.2.0",
    "PyYAML>=6.0",
    "tzdata>=2024.1",
]

[project.urls]
homepage = "https://github.com/m-31/little-sister"
repository = "https://github.com/m-31/little-sister"
issues = "https://github.com/m-31/little-sister/issues"
changelog = "https://github.com/m-31/little-sister/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.13",
    "types-PyYAML",
]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
# Beyond ruff's default (E, F): import sorting (I), pyupgrade (UP — the 3.14
# idioms), bugbear (B), comprehensions (C4) and Ruff's own rules (RUF). The
# ambiguous-unicode rules are off: the UI uses typographic "—" and "…" on purpose.
select = ["E", "F", "W", "I", "UP", "B", "C4", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
files = ["src"]
strict = true

[tool.pytest.ini_options]
addopts = "--cov=little_sister --cov-report=term-missing"


[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

